# deepfix

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCESS_COMPARISON.md  AGENTS.md  Dockerfile  Dockerfile.mlflow  QUICK_START.md  README.md  USAGE_GUIDE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sh  mkdocs.yml  nohup.out  productionizing.md  pyproject.toml  start_server.sh  start_server_docker.sh  test.env.example
.cursor/rules/: commit.md  mintlify.md  python.md
.github/workflows/: docs.yml  workflow.yml
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
backups/: .gitkeep
cursor_wrapper/: .env.example  Dockerfile  app.py
deepfix-core/: pyproject.toml
deepfix-core/src/deepfix_core/: models.py
deepfix-core/src/deepfix_core/models/: __init__.py  analysis.py  api.py  artifacts.py  database.py  defaults.py
deepfix-kb/: pyproject.toml
deepfix-kb/src/deepfix_kb/: config.py
deepfix-kb/src/deepfix_kb/knowledge_base/: __init__.py  manager.py
deepfix-portal/: .dockerignore  .env.example  Caddyfile  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  README_API.md  package.json  pyproject.toml  requirements.txt  vite.config.ts
deepfix-portal/api/: alembic.ini  database.py  dependencies.py  main.py  models.py  utils.py
deepfix-portal/api/migrations/: env.py
deepfix-portal/api/routes/: api_keys.py  auth.py  users.py
deepfix-portal/client/: .env.local  index.html
deepfix-portal/client/src/: App.tsx  index.css
deepfix-portal/client/src/components/: AnalysisResponseView.tsx  RequestDetailDialog.tsx  RequestHistoryTab.tsx  layout.tsx
deepfix-portal/client/src/components/analysis/: ContextSection.tsx  IssueCard.tsx  StatisticsSection.tsx  SummarySection.tsx
deepfix-portal/client/src/hooks/: use-request-logs.ts
deepfix-portal/client/src/lib/: analysis-utils.tsx  api-url.ts  auth.tsx
deepfix-portal/client/src/pages/: auth.tsx  dashboard.tsx  forgot-password.tsx  landing.tsx  reset-password.tsx  verify-email.tsx
deepfix-portal/src/deepfix_portal/api/: alembic.ini  database.py  dependencies.py  dspy_cache.py  email_service.py  main.py  models.py  schemas.py  utils.py
deepfix-portal/src/deepfix_portal/api/migrations/: README.md  env.py
deepfix-portal/src/deepfix_portal/api/migrations/versions/: 002_add_password_reset.py  003_add_dspy_cache.py
deepfix-portal/src/deepfix_portal/api/routes/: analysis.py  api_keys.py  auth.py  users.py
deepfix-sdk/: .env.example  README.md  example.env  pyproject.toml
deepfix-sdk/src/deepfix_sdk/: __init__.py  __main__.py  cli.py  client.py  config.py  ui.py
deepfix-sdk/src/deepfix_sdk/artifacts/: __init__.py  manager.py  repository.py
deepfix-sdk/src/deepfix_sdk/data/: __init__.py  datasets.py  loader.py  utils.py
deepfix-sdk/src/deepfix_sdk/integrations/: deepchecks.py  lightning.py  mlflow.py
deepfix-server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  start_server_docker.sh
deepfix-server/src/deepfix_server/: __main__.py  api.py  callbacks.py  cli.py  config.py  coordinators.py  database.py  db_models.py  logging.py  models.py  portal_client.py  tools.py
deepfix-server/src/deepfix_server/agents/: artifact_analyzers.py  base.py  cross_artifact_reasoning.py  knowledge_bridge.py  optimizationadvisor.py  signatures.py  training_dynamics_utils.py
deepfix-server/src/deepfix_server/coding_agents/: cursor.py  openai_api.py
deepfix-server/src/deepfix_server/knowledge_base/: manager.py
deepfix-server/src/deepfix_server/prompt_builders/: __init__.py  base.py  checkpoint_prompt.py  dataset_prompt.py  deepchecks_prompt.py  instructions.py  prompt_builder.py  training_prompt.py
dev-plan/: ArtifactAnalysis.md  CrossArtifactIntegrationAgent.md  KnowledgeBridge.md  agentic-system.md
docs/: CNAME  index.md
docs-mint/: docs.json  index.mdx  quickstart.mdx
docs-mint/api-reference/: introduction.mdx
docs-mint/api-reference/core/: core.mdx
docs-mint/api-reference/sdk/: SDK.mdx
docs-mint/api-reference/server/: server.mdx
docs-mint/architecture/: agents.mdx  client-server.mdx  overview.mdx
docs-mint/contributing/: development.mdx  guidelines.mdx
docs-mint/deployment/: docker.mdx  local-setup.mdx
docs-mint/getting-started/: configuration.mdx  installation.mdx  quickstart.mdx
docs-mint/guides/: NLP-datasets.mdx  image-classification.mdx  mlflow-integration.mdx  tabular-data.mdx
docs-mint/tutorials/: computer-vision.mdx  nlp.mdx  tabular.mdx  tabular_french.mdx
docs/api-reference/: index.md
docs/api-reference/core/: index.md
docs/api-reference/sdk/: index.md
docs/api-reference/server/: index.md
docs/architecture/: agents.md  client-server.md  overview.md
docs/contributing/: development.md  guidelines.md
docs/deployment/: docker.md  local-setup.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: image-classification.md  mlflow-integration.md  nlp-datasets.md  tabular-data.md
docs/tutorials/: computer-vision.md  nlp.md  tabular.md  tabular_french.md
examples/: dataset_analysis.ipynb  dataset_analysis.py  dev.py  dev_cursor_wrapper.py
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
scripts/: deploy.sh  export_notebooks.py  generate-certs.ps1  generate-certs.sh  run_e2e_tests.bat  update_push_docs.bat  verify-deployment.ps1
specs/: service-spec.md  workflow-spec.md
src/deepfix/: ui.py
src/deepfix/cli/: commands.py  main.py
src/deepfix/server/: api.py
src/deepfix/shared/: models.py
tests/: conftest.py  run_e2e_tests.bat  test_deepchecks_dataloaders.py  test_deepchecks_runners.py  test_nlp_workflow_e2e.py  test_tabular_workflow_e2e.py  test_vision_workflow_e2e.py
traefik/: traefik.yml
traefik/certs/: .gitkeep  server.pfx
traefik/dynamic/: config.yml
tutorials/: computer-vision.ipynb  nlp.ipynb  tabular.ipynb  tabular_french.ipynb
(+28 files in other folders)
