[project]
name = "deepfix"
version = "0.1.0"
description = "DeepFix is a copilot designed to provide systematic guidance for machine learning model training, and debugging."
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "deepfix-core",
    "deepfix-sdk",
    "fire>=0.7.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "nbconvert>=7.16.6",
    "streamlit>=1.51.0",
    "psycopg2>=2.9.11",
    "bcrypt==4.0.1",
    "pre-commit>=4.5.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp>=1.39.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["I", "E", "F", "W", "C90"]
lint.ignore = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.uv.sources]
deepfix-core = { workspace = true }
deepfix-sdk = { workspace = true }
deepfix-server = { workspace = true }
deepfix-portal = { workspace = true }

[tool.uv.workspace]
members = ["packages/deepfix-core","packages/deepfix-sdk","packages/deepfix-server","packages/deepfix-portal"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
