[project]
name = "deepfix_core"
version = "0.1.0"
readme = "README.md"
description = "DeepFix core modules shared between SDK and Server."
requires-python = ">=3.11.0"
dependencies = [
    "omegaconf>=2.3.0",
    "pandas",
    "platformdirs",
    "pyyaml",
    "pydantic",
    "rich",
    "sqlalchemy",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["I", "E", "F", "W", "C90"]
lint.ignore = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
