[project]
name = "deepfix_portal"
version = "0.1.0"
readme = "README.md"
description = "DeepFix Portal"
requires-python = ">=3.11.0"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt[crypto]>=2.10.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["I", "E", "F", "W", "C90"]
lint.ignore = []

[build-system]
requires = ["setuptools>=75.7.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


