[project]
name = "deepfix_portal"
version = "0.1.0"
readme = "README.md"
description = "DeepFix Portal"
requires-python = ">=3.11.0"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.124.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["I", "E", "F", "W", "C90"]
lint.ignore = []

[build-system]
requires = ["setuptools>=75.7.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


