[project]
name = "deepfix_portal"
version = "0.1.0"
readme = "README.md"
description = "DeepFix Portal"
requires-python = ">=3.11.0"
dependencies = [
    "aiosmtplib>=3.0.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.124.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "deepfix-core",
    "deepfix-server",
    "langfuse>=3.10.6",
    "openinference-instrumentation-dspy>=0.1.31",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["I", "E", "F", "W", "C90"]
lint.ignore = []

[tool.uv.sources]
deepfix-core = { workspace = true }
deepfix-server = { workspace = true }

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
