[project]
name = "deepfix_server"
version = "0.1.0"
description = "DeepFix server."
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "dspy>=3.0.3",
    "httpx>=0.28.1",
    "litserve>=0.2.16",
    "llama-index-retrievers-bm25>=0.6.5",
    "mlflow>=3.3.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "typer",
    "deepfix-core",
    "seaborn"
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["I", "E", "F", "W", "C90"]
lint.ignore = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
deepfix-core = {workspace = true}

[project.scripts]
deepfix-server = "deepfix_server.cli:main"
